django_distribute/static/distribute/style.css
:root {
  --panel-bg-color: #313031;
  --panel-border: 2px outset #363536;
  --header-bg-color: #242324;
  --font-family: "Titillium Web", sans-serif;
  --cancel-bg-color: #fe5a5a;
  --cancel-border: 1px outset #972725;
  --cancel-bg-color-hover: #ffafaf;
  --cancel-border-hover: 1px outset #d97575;
  --cancel-bg-color-active: #fca8a8;
  --cancel-border-active: 1px outset #8b2b2a;
  --cancel-box-shadow: 0 0 10px #d97575;
  --button-text-color: rgb(29, 28, 29);
  --button-text-color-pressed: rgb(28, 28, 28);
  --link-color: rgb(117, 218, 251);
  --link-color-hover: #9ad1ea;
  --active-color: #403f40;
  --light-body-bg-color: #8e8e8e;
  --light-panel-bg-color: #6e6e6e;
  --light-panel-border-color: #666666;
  --input-bg-color: #828282;
}

/* Common */
.display-panel {
  background-color: var(--panel-bg-color);
  border: 6px solid var(--active-color);
}

html.light-theme .display-panel {
  background-color: var(--light-panel-bg-color);
  border: 6px solid var(--light-panel-border-color);
}

/* Body */
html body {
  background-color: #1a191a;
  color: #fde4bf;
  transition:
    background-color 0.3s,
    color 0.3s;
  font-family: var(--font-family);
  font-weight: 400;
  font-style: normal;
}

html.light-theme body {
  background-color: var(--light-body-bg-color);
  color: black;
}

/* Navigation bar */
.nav-bar {
  display: flex;
  background-color: var(--panel-bg-color);
  border: var(--panel-border);
  align-items: center;
  padding: 0;
}

html.light-theme .nav-bar {
  background-color: var(--light-panel-bg-color);
}

.nav-bar ul {
  display: flex;
  list-style: none;
  background-color: #121112;
  padding: 2px;
  margin: 8px;
}

.nav-bar li {
  margin: 2px 2px;
}

.nav-bar-item {
  background-color: #8e8e8e;
  color: var(--button-text-color);
  text-decoration: none;
  border: 2px outset grey;
  font-family: var(--font-family);
  font-weight: 700;
  font-style: normal;
}

.nav-bar-item:hover,
html.light-theme #theme-toggle:hover {
  background-color: #e39827;
  border: 2px outset #db9225;
}

.nav-bar-item:active,
html.light-theme #theme-toggle:active {
  background-color: #f1be64;
  border: 2px outset #60451c;
  color: var(--button-text-color-pressed);
}

.nav-bar-item-context,
html.light-theme #theme-toggle {
  background-color: var(--active-color);
  border: 2px outset #5b5857;
  color: #ffe6c0;
}

.text-button {
  position: relative;
  user-select: none;
}

.nav-bar-item:active .text-button {
  top: 2px;
}

.nav-bar a {
  padding: 0.5em 4em;
  display: inline-block;
}

#theme-toggle-container {
  margin-left: auto;
  margin-right: 8px;
  background-color: #121112;
  padding: 4px;
}

#theme-toggle {
  cursor: pointer;
  margin-left: auto;
  padding: 0.5em 4em;
}

/* Main article */
article {
  display: flex;
  background-color: var(--panel-bg-color);
  border: var(--panel-border);
  margin: 40px;
  width: fit-content;
}

html.light-theme article {
  background-color: var(--light-panel-bg-color);
}

/* Setup section */
section {
  margin-left: 10px;
  min-width: 350px;
}

#setup {
  margin-top: 2px;
  margin-bottom: 6px;
}

/* Item search */
#item-collection-form {
  background-color: var(--header-bg-color);
  padding: 2px 2px;
}

h3 {
  margin-top: auto;
  background-color: var(--header-bg-color);
  border: 2px outset #1b1a1a;
  display: table;
  width: 96%;
  padding: 8px 0;
  padding-left: 10px;
  margin-bottom: 10px;
}

html.light-theme h3 {
  background-color: var(--light-body-bg-color);
}

#input-grid {
  font-family: var(--font-family);
  display: grid;
  grid-template-columns: 60px 1fr;
  max-width: 300px;
  margin: auto;
  row-gap: 10px;
}

input[type=text], input[type=number] {
  font-family: var(--font-family);
}

#add-item-button {
  margin-left: 10px;
  height: 100%;
  aspect-ratio: 1 / 1;
}

.confirm-button {
  color: var(--button-text-color);
  background-color: #5eb663;
  border: 1px outset #39763c;
}

.confirm-button:hover {
  background-color: #a8eeac;
  border: 1px outset #55d45e;
  color: var(--button-text-color);
  box-shadow: 0 0 10px #55d45e;
}

.confirm-button:active {
  background-color: #cfdf93;
  border: 1px outset #9fa76c;
  color: var(--button-text-color-pressed);
  box-shadow: 0 0 0;
  top: 2px;
}

.confirm-button:active .text-button {
  top: 0.2px;
}

.error {
  color: #fe5a5a;
}

#search-error {
  grid-column: 2;
}

#count-error {
  grid-column: 2;
}

input {
  background-color: var(--input-bg-color);
}

input:focus, textarea:focus {
  background-color: #f0dab4;
}

#user-count-input {
  max-width: 80px;
}

#distribute-button {
  font-family: var(--font-family);
  font-weight: 700;
  font-style: normal;
  width: 100px;
}

/* Side bar - Itemlist */
aside {
  padding: 1em 1em;
  margin-top: -34px;
  min-width: 350px;
}

#panel-border {
  background-color: var(--header-bg-color);
  padding: 2px 2px;
}

#item-header {
  margin-bottom: 6px;
}

thead tr {
  background-color: var(--header-bg-color);
  border: 2px outset #1b1a1a;
}

html.light-theme thead tr {
  background-color: var(--light-body-bg-color);
  border: 2px outset var(--light-panel-border-color);
}

thead th {
  padding: 8px 10px;
}

.display-panel table {
  width: 100%;
  border-collapse: collapse;
  text-align: left;
  font-family: var(--font-family);
  font-weight: 600;
  font-style: normal;
}

tbody tr {
  background-color: var(--panel-bg-color);
  border: var(--panel-border);
}

html.light-theme tbody tr {
  background-color: var(--light-panel-bg-color);
  border: 2px outset var(--light-panel-border-color);
}

table td {
  color: white;
  text-shadow:
    -1px -1px 0 #000,
    1px -1px 0 #000,
    -1px 1px 0 #000,
    1px 1px 0 #000,
    -1px 0px 0 #000,
    1px 0px 0 #000,
    0px -1px 0 #000,
    0px 1px 0 #000;
  padding-left: 10px;
}

html.light-theme table td {
  color: black;
  text-shadow: none;
}

.added-item {
  white-space: nowrap;
}

#remove-button {
  background-color: var(--cancel-bg-color);
  border: var(--cancel-border);
  align-items: center;
}

.trash-icon {
  object-fit: contain;
  height: 0.8em;
  width: auto;
}

#remove-button:hover {
  background-color: var(--cancel-bg-color-hover);
  border: var(--cancel-border-hover);
  color: var(--button-text-color);
  box-shadow: var(--cancel-box-shadow);
}

#remove-button:active {
  background-color: var(--cancel-bg-color-active);
  border: var(--cancel-border-color-active);
  color: var(--button-text-color-pressed);
  box-shadow: 0 0 0;
}

.remove-data:active .text-button {
  top: 2px;
}

#blueprint-form {
  display: flex;
  flex-direction: column;
  padding-right: 16px;
  padding-bottom: 8px;
}

#blueprint-input {
  padding-bottom: 240px;
  overflow: scroll;
  overflow-wrap: break-word;
}

#paste-import {
  margin-top: 8px;
  display: grid;
  grid-template-columns: 1fr 1fr;
}

#import-button {
  margin-left: auto;
}

.tooltip {
  visibility: hidden;
  position: absolute;
  z-index: 1;
  width: 140px;
  background-color: var(--light-panel-bg-color);
  border: var(--light-panel-border-color);
  color: var(--button-text-color);
  top: 100%;
  left: 50%;
  margin-left: -70px;
  padding: 1px;
  border-radius: 4px;
}

html.light-theme .tooltip {
  background-color: var(--panel-bg-color);
  color: #fde4bf;
}

#import-button:hover .tooltip {
  visibility: visible;
}

textarea {
  font-family: var(--font-family);
}

/* Footer */
footer {
  background-color: var(--panel-bg-color);
  border: var(--panel-border);
  align-items: center;
  padding: 0;
  margin-bottom: auto;
  height: auto;
  display: grid;
  grid-template-columns: 1fr 1fr;
}

html.light-theme footer {
  background-color: var(--light-panel-bg-color);
}

.logo-link-box {
  flex-wrap: wrap;
  display: flex;
  align-items: center;
  font-size: 16px;
  gap: 4px;
  padding: 2px 8px;
}

html.light-theme .logo-link-box a {
  color: #7ec8ea;
}

.logo-link-box a {
  display: flex;
  align-items: center;
  color: var(--link-color);
}

.logo-link-box a:hover {
  color: var(--link-color-hover);
}

.logo {
  object-fit: contain;
  height: 2em;
  width: auto;
  filter: brightness(80%);
}

html.light-theme .logo {
  filter: brightness(0%);
}

.change-info {
  margin-left: auto;
  padding-right: 8px;
}

/* Results page */
#results-header {
  display: grid;
  grid-auto-columns: minmax(0, 1fr);
  grid-auto-flow: column;
}

#summary {
  margin-top: 20px;
  width: 40%;
}

#blueprints {
  margin-top: 20px;
  margin-left: 4px;
  padding: 12px;
  background-color: var(--panel-bg-color);
  border: 2px outset #251e1c;
  width: 93%;
}

html.light-theme #blueprints {
  background-color: var(--light-panel-bg-color);
}

#blueprints h4 {
  margin-top: -8px;
  margin-bottom: -4px;
}

.blueprint-box {
  font-size: small;
  padding: 2px 4px;
  overflow: scroll;
  overflow-wrap: break-word;
  background-color: var(--input-bg-color);
  color: black;
  border-radius: 4px;
  border: 2px inset #2f2a29;
  max-height: 100px;
}

#copy-button, #paste-button, #import-button {
  width: 100px;
  height: 30px;
}

html.light-theme #copy-button {
  border-color: black;
}

::selection {
  background-color: #f1be64;
}

#per-distributions {
  display: grid;
  grid-template-columns: 1fr 1fr;
}

.item-results-container {
  border: var(--panel-border);
}

.distribute-results h3 {
  margin-top: 16px;
}

.table-cell-item {
  min-width: 220px;
}

h4 {
  margin-top: 2px;
  margin-bottom: auto;
  margin-left: 2px;
}

.results-section-container {
  background-color: var(--panel-bg-color);
  border: 2px solid black;
  width: fit-content;
  padding: 8px 8px 8px 8px;
}

html.light-theme .results-section-container {
  background-color: var(--light-panel-bg-color);
}

.cancel-button {
  color: var(--button-text-color);
  text-decoration: none;
  font-family: var(--font-family);
  font-weight: 700;
  font-style: normal;
}

.return {
  background-color: var(--cancel-bg-color);
  border: var(--cancel-border);
  width: 50px;
  margin: 12px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: center;
}

.return:hover {
  background-color: var(--cancel-bg-color-hover);
  border: var(--cancel-border-hover);
  color: var(--button-text-color);
  box-shadow: var(--cancel-box-shadow);
}

.return:active {
  background-color: var(--cancel-bg-color-active);
  border: var(--cancel-border-color-active);
  color: var(--button-text-color-pressed);
  box-shadow: 0 0 0;
}

#cancel-container {
  display: flex;
}

/* Contact & About pages */
.info-section {
  background-color: var(--panel-bg-color);
  border: var(--panel-border);
  margin: 8px auto 8px auto;
  padding-left: 16px;
}

html.light-theme .info-section {
  background-color: var(--light-panel-bg-color);
}

.info-div p {
  color: white;
}

html.light-theme .info-div a {
  color: #164e68;
}

.info-div a {
  color: var(--link-color);
}

.info-div a:hover {
  color: var(--link-color-hover);
}

.info-panel {
  background-color: var(--active-color);
  border: 2px outset #656362;
  padding: 12px;
  width: 60%;
}

.info-panel-short {
  background-color: var(--active-color);
  border: 2px outset #656362;
  padding: 12px;
  width: 40%;
}

html.light-theme .info-panel,
html.light-theme .info-panel-short {
  background-color: var(--light-body-bg-color);
  color: black;
}

